[YSPARK-239] add example accessing hive including pom dependencies